# photoshow

./: .gitignore  README.md  SimplePhotoShow.sln
.github/workflows/: build.yml
SimplePhotoShow/: .gitignore  Configuration.cpp  Configuration.h  D2D1Util.h  FileUtil.cpp  FileUtil.h  ImageUtil.cpp  ImageUtil.h  Infrastructure.cpp  PhotoShow.cpp  PhotoShow.h  RefCnt.h  SimplePhotoShow.rc  SimplePhotoShow.vcxproj  SimplePhotoShow.vcxproj.filters  StringUtil.h  resource.h
qt-port/: .gitignore  CMakeLists.txt  imagewidget.cpp  imagewidget.h  main.cpp  photoshow.kdev4
